Pequenos acertos em layout

--- a/Save_Money_1/acesso.html
+++ b/Save_Money_1/acesso.html
@@ -26,7 +26,7 @@
                         </ul>
                         
                         <div class="card-body">
-                          <a href="#" class="card-link text-light btn btn-dark"><buttom type="buttom">Acessar</buttom></a><br>
+                          <a href="#" class="card-link text-light btn btn-dark"><buttom type="buttom">Entrar</buttom></a><br>
                           <br>
                           <a href="cadastro.html" class="card-link text-light btn btn-dark"><buttom type="buttom">Cadastrar</buttom></a>
                         </div>
