Criação do Formulário, ainda bem cru

--- a/Save_Money_1/acesso.html
+++ b/Save_Money_1/acesso.html
@@ -35,20 +35,30 @@
       </header>
         <div class="container-fluid mt-5 mb-5">       
             <div  class="container-fluid   text-center">              
-              <div class="card border-dark bg-success" style="width: 14rem;">
+              <div class="card border-dark center bg-success" style="width: 14rem;">
                 <br>
                 <h5 class="card-title ">Acesso ao Usário</h5>
                 <br>
                 <img src="img/edmilson.jpg" class="card-img-top" alt="responsive image">
+                <form>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">E-mail</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">        
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputPassword1">Senha</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                  </div>
+                  <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Salvar para manter o acesso</label>
+                  </div>
+                  <button type="submit" class="btn btn-dark">Acessar</button>
+                </form>
                 
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item  btn-success"><input type="text" id="input" placeholder="E-mail"></li>
-                    <li class="list-group-item  btn-success"><input type="text" id="input" placeholder="Senha"></li>
-                </ul>
+                
                 <div class="card-body">
                   <div class="card-body">
-                    <a href="#" class="card-link text-light btn btn-dark"><buttom type="buttom">Entrar</buttom></a><br>
-                    <br>
                     <a href="cadastro.html" class="card-link text-light btn btn-dark"><buttom type="buttom">Cadastrar</buttom></a>
                   </div>
                 </div>
