--- a/Save_Money_2/dashboard.html
+++ b/Save_Money_2/dashboard.html
@@ -11,10 +11,10 @@
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="#" class="navbar__logo">SaveMoney</a>
+				<a href="index.html" class="navbar__logo">SaveMoney</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="#">Página Inicial</a></li>
+						<li><a href="index.html">Início</a></li>
 						<li><a href="#">Sair</a></li>
 					</ul>
 				</nav>
@@ -34,8 +34,8 @@
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h3 class="app__main__title">AREA DE INFORMAÇÃO</h3>
-						<p>COMPLEMENTO NÃO ESQUECER O MODAL</p>
+						<h3 class="app__main__title">Bem vindo(a) de volta!</h3>
+						<p>Logo abaixo segue seu planejamento referente ao mês atual.</p>
 					</div>
 				</div>
 			</div>
