--- a/Save_Money_2/cadastro.html
+++ b/Save_Money_2/cadastro.html
@@ -3,7 +3,7 @@
 <head>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>SaveMoney - Login</title>
+	<title>SaveMoney - Cadastro</title>
 	<link rel='stylesheet' href='css/style.css' />
 </head>
 <body class="fadeIn">
@@ -14,6 +14,7 @@
 				<a href="index.html" class="navbar__logo">SaveMoney</a>
 				<nav class="navbar__menu">
 					<ul>
+						<li><a href="login.html">Login</a></li>
 						<li><a href="index.html">Início</a></li>
 					</ul>
 				</nav>
@@ -25,20 +26,27 @@
 		<div class="container">
 			<div class="auth__inner">
 				<div class="auth__media">
-					<img src="./images/undraw_Access.svg">
+					<img src="./images/undraw_Reg.svg">
 				</div>
 				<div class="auth__auth">
-					<h1 class="auth__title">Login</h1>
-					<p>Entre com seu e-mail e senha:</p>
+					<h1 class="auth__title">Cadastre-se</h1>
+					<p>Coloque algumas informações sobre você para a gente possa te ajudar :)</p>
 					<form method='post' action="/example" autocompelete="new-password" role="presentation" class="form">
+						<input name="name" class="fakefield">
+						<label>Nome</label>
+						<input type="text" name="name" id='name' placeholder="Seu nome completo">
+						<input name="date" class="fakefield">
+						<label>Data de nascimento</label>
+						<input type="date" name="nasc" id='nasc' placeholder="Data de nascimento">
 						<input name="email" class="fakefield">
 						<label>E-mail</label>
 						<input type="text" name="email" id='email' placeholder="seuemail@email.com">
 						<label>Senha</label>
 						<input type="password" name="password" id='suasenha' placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" autocomplete="off">
-						<button type='submit' class="button button__accent">Entrar</button>
-						<a href="cadastro.html" button type='submit' class="button button__accent">Cadastrar</button>
-						<a href=""><h6 class="left-align">Esqueceu sua senha?</h6></a>
+						<input name="indic" class="fakefield">
+						<label>Indicação</label>
+						<input type="text" name="indic" id='indic' placeholder="Alguém indicou a gente? Nos diga quem :)">
+						<button type='submit' class="button button__accent">Cadastrar</button>
 					</form>
 				</div>
 			</div>
