--- a/Save_Money_2/cadastro.html
+++ b/Save_Money_2/cadastro.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="auth__auth">
 					<h1 class="auth__title">Cadastre-se</h1>
-					<p>Coloque algumas informações sobre você para a gente possa te ajudar :)</p>
+					<p>Coloque algumas informações sobre você para que a gente possa te ajudar :)</p>
 					<form method='post' action="/example" autocompelete="new-password" role="presentation" class="form">
 						<input name="name" class="fakefield">
 						<label>Nome</label>
@@ -43,9 +43,6 @@
 						<input type="text" name="email" id='email' placeholder="seuemail@email.com">
 						<label>Senha</label>
 						<input type="password" name="password" id='suasenha' placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" autocomplete="off">
-						<input name="indic" class="fakefield">
-						<label>Indicação</label>
-						<input type="text" name="indic" id='indic' placeholder="Alguém indicou a gente? Nos diga quem :)">
 						<button type='submit' class="button button__accent">Cadastrar</button>
 					</form>
 				</div>
