--- a/Save_Money_2/dashboard.html
+++ b/Save_Money_2/dashboard.html
@@ -4,6 +4,7 @@
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMovey - Plataforma</title>
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<link rel='stylesheet' href='css/style.css' />
 </head>
 <body class="fadeIn">
