--- a/Save_Money_2/app/dashboard.html
+++ b/Save_Money_2/app/dashboard.html
@@ -4,42 +4,39 @@
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMovey - Plataforma</title>
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-	<link rel='stylesheet' href='css/style.css' />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">	
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel='stylesheet' href='css/style.css'>
 </head>
 <body class="fadeIn">
 	<div class="navbar">
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="index.html" class="navbar__logo">SaveMoney</a>
 				<nav class="navbar__menu">
-					<ul class="nav">
-						<li class="nav-item">
-						  <a class="nav-link active" href="#">Dashboard</a>
-						</li>
-						<li class="nav-item">
-						  <a class="nav-link" href="#">Cadastros</a>
-						</li>
-						<li class="nav-item float-right">
-							<div class="dropdown ">
-								<button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="border-radius: 50px;">
-									<img src="../app/images/engrenagem.svg" alt="">
-								</button>
-								<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-									<a class="dropdown-item" href="#">Perfil</a>
-									<hr>
-									<a class="dropdown-item" href="#">Sair</a>
-								</div>
+													
+					<uL>				
+						<li><a href="index.html" class="navbar__logo">SaveMoney</a></li>							
+						<li><a href="#">Perfil</a></li>						
+						<li>
+							<div class="dropdown">
+								<a class="btn  dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/config_2.png" width="30px" height="30px"></a>
+							
+								<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+								<a class="dropdown-item text-dark" href="#">Configurações</a>
+								<a class="dropdown-item text-dark" href="#">Suporte</a>
+								<a class="dropdown-item text-dark" href="#">Sair</a>
 							</div>
-						</li>
-					</ul>					
+						  </div>
+						</li>  
+					</uL>							
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
 			</div>
 		</div>
 	</div>
+	
 
 	
 	<script>
@@ -55,6 +52,37 @@
 		}
 
 	</script>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	<div class="card-group">
+		<div class="card">
+		  <img src="..." class="card-img-top" alt="...">
+		  <div class="card-body">
+			<h5 class="card-title">Card title</h5>
+			<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+		  </div>
+		</div>
+		<div class="card">
+		  <img src="..." class="card-img-top" alt="...">
+		  <div class="card-body">
+			<h5 class="card-title">Card title</h5>
+			<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+			<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+		  </div>
+		</div>
+		<div class="card">
+		  <img src="..." class="card-img-top" alt="...">
+		  <div class="card-body">
+			<h5 class="card-title">Card title</h5>
+			<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+			<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+		  </div>
+		</div>
+	  </div>
 
 	<div class="container-fluid mt-3">
 		<div class="row">
@@ -255,8 +283,8 @@
 		</div>
 	</div>
 <script src='js/app.min.js'></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!-- jQuery and JS bundle w/ Popper.js -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
