--- a/Save_Money/app/login.html
+++ b/Save_Money/app/login.html
@@ -13,11 +13,7 @@
 		<div class="container">
 			<div class="navbar__inner">
 				<a href="index.html" class="navbar__logo">SaveMoney</a>
-				<nav class="navbar__menu">
-					<ul>
-						<li><a href="index.html">Início</a></li>
-					</ul>
-				</nav>
+				
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
 			</div>
 		</div>
@@ -37,8 +33,7 @@
 						<input type="text" name="e_mail" id='email' placeholder="seuemail@email.com">
 						<label>Senha</label>
 						<input type="password" name="senha" id='suasenha' placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" autocomplete="off">
-						<button type='submit' class="button button__accent">Entrar</button>
-						<a href="cadastro.html" button type='submit' class="button button__accent">Cadastrar</button>
+						<button type='submit' class="button button__accent"><a href="dashboard.html">ACESSAR</a></button>
 						<a href=""><h6 class="left-align">Esqueceu sua senha?</h6></a>
 					</form>
 				</div>
