--- a/Save_Money/app/index.html
+++ b/Save_Money/app/index.html
@@ -16,15 +16,18 @@
 			<div class="navbar__inner">
 				<a href="index.html" class="navbar__logo">SaveMoney</a>
 				<nav class="navbar__menu">
-					<ul>
+					<ul> 
 						<li><a href="#inicio">Início</a></li>
 						<li><a href="#objetivo">Objetivo</a></li>
 						<li><a href="#sobre">Sobre Nós</a></li>
 						<li><a href="#plataforma">Plataforma</a></li>
-					</ul>
+						<li></li>		
+					</ul>					
 				</nav>
-				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
+				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" ></path></svg></a></div>
+				
 			</div>
+			<a href="login.html" class="button">LOGIN</a>
 		</div>
 	</div>
 	<div class="hero" id="inicio">
@@ -34,8 +37,8 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id='navConverter'>
-						<h1 class="hero__title">Infomação Destaque</h1>
-						<p class="hero__text">Info Destaque</p>
+						<h1 class="hero__title">O LOCAL CERTO DE GUARDA DINHEIRO</h1>
+						<p class="hero__text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 						<a href="login.html" class="button hero__button">Acesse</a>
 						<a href="#footer" class="button hero__button">Contate-nos</a>
 					</div>
@@ -56,15 +59,15 @@
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Nosso Objetivo</h2>
-					<p class="expanded__text">Info Objetivo</p>
+					<p class="expanded__text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="steps landing__section"id="sobre">
 		<div class="container">
-			<h2>Nossos Time</h2>
-			<p>Info Time</p>
+			<h2>Equipe</h2>
+			<p>Apresentar ótimo produto com alta qualidade</p>
 		</div>
 		<div class="container">
 			<div class="steps__inner">
@@ -72,35 +75,35 @@
 					<div class="step__media">
 						<img src="./images/undraw_productivity.svg" class="step__image">
 					</div>
-					<h4>Nome</h4>
+					<h4>Edmilson</h4>
 					<p class="step__text">Desenvolvedor de Projetos</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
 						<img src="./images/undraw_product_iteration.svg" class="step__image">
 					</div>
-					<h4>Nome</h4>
+					<h4>Gustavo</h4>
 					<p class="step__text">Analista de Requisitos</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
 						<img src="./images/undraw_futuristic_interface.svg" class="step__image">
 					</div>
-					<h4>Nome</h4>
+					<h4>Augusto</h4>
 					<p class="step__text">Desenvolvedor de Interface</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
 						<img src="./images/undraw_developer_activity.svg" class="step__image">
 					</div>
-					<h4>Nome</h4>
+					<h4>Davi</h4>
 					<p class="step__text">Desenvolvedor Back-end</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
 						<img src="./images/undraw_web_developer.svg" class="step__image">
 					</div>
-					<h4>Nome</h4>
+					<h4>Vander</h4>
 					<p class="step__text">Analista de Testes</p>
 				</div>
 			</div>
@@ -114,7 +117,7 @@
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">A Plataforma</h2>
-					<p class="expanded__text">Info Plataforma</p>
+					<p class="expanded__text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 				</div>
 			</div>
 		</div>
