--- a/Save_Money/app/cadastro.html
+++ b/Save_Money/app/cadastro.html
@@ -27,23 +27,11 @@
 				<div class="auth__auth">
 					<h1 class="auth__title">Cadastre-se</h1>
 					<p>Para realizar o cadastro digite os seus dados :)</p>
-					<form method="get" action="php/cadastro.php" autocompelete="new-password" role="presentation" class="form">
-						<input name="name" class="fakefield">
-						<label>Nome</label>
-						<input type="text" name="name" id='name' placeholder="Seu nome completo">
-						<input name="date" class="fakefield">
-						<input name="email" class="fakefield">
-						<label>E-mail</label>
-						<input type="text" name="email" id='email' placeholder="Email">
-						<label>Data de Nascimento</label>
-						<input type="date" name="data_nascimento" />
-						<label>CPF</label>
-						<input type="text" name="cpf" id='cpf' placeholder="000000000-00">
-						<label>Senha</label>
-						<input type="password" name="password" id='suasenha' placeholder="Senha" autocomplete="off">
-						<button type='submit' class="button button__accent">Cadastrar</button>
-						
-					</form>
+					<form method="POST" action="cadastro.php">
+						<label>Login:</label><input type="text" name="login" id="login"><br>
+						<label>Senha:</label><input type="password" name="senha" id="senha"><br>
+						<input type="submit" value="Cadastrar" id="cadastrar" name="cadastrar">
+						</form>
 				</div>
 			</div>
 		</div>
