--- a/Save_Money/app/login.html
+++ b/Save_Money/app/login.html
@@ -27,14 +27,12 @@
 				<div class="auth__auth">
 					<h1 class="auth__title">Login</h1>
 					<p>Entre com seu e-mail e senha:</p>
-					<form method="get" action="php/login.php" autocompelete="new-password" role="presentation" class="form" >
-						<input name="email" class="fakefield">
-						<label>E-mail</label>
-						<input type="text" name="e_mail" id='email' placeholder="seuemail@email.com">
-						<label>Senha</label>
-						<input type="password" name="senha" id='suasenha' placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" autocomplete="off">
-						<button type='submit' class="button button__accent"><a href="dashboard.html">ACESSAR</a></button>
-						<a href=""><h6 class="left-align">Esqueceu sua senha?</h6></a>
+					<form method="POST" action="login.php">
+						<label>Login:</label><input type="text" name="login" id="login"><br>
+						<label>Senha:</label><input type="password" name="senha" id="senha"><br>
+						<input type="submit" value="entrar" id="entrar" name="entrar"><br>
+						<a href="cadastro.html">Cadastre-se</a>
+						<a href="#"><h6 class="left-align">Esqueceu sua senha?</h6></a>
 					</form>
 				</div>
 			</div>
