--- a/Save_Money/app/cadastro.html
+++ b/Save_Money/app/cadastro.html
@@ -28,10 +28,11 @@
 					<h1 class="auth__title">Cadastre-se</h1>
 					<p>Para realizar o cadastro digite os seus dados :)</p>
 					<form method="POST" action="cadastro.php">
-						<label>Login:</label><input type="text" name="login" id="login"><br>
-						<label>Senha:</label><input type="password" name="senha" id="senha"><br>
-						<input type="submit" value="Cadastrar" id="cadastrar" name="cadastrar">
-						</form>
+						<label>E-MAIL</label><input type="text" name="login" id="login"><br>
+						<label>SENHA</label><input type="password" name="senha" id="senha"><br>
+						<label>SENHA NOVAMENTE</label><input type="password" name="senha2" id="senha2"><br>
+						<input type="submit" class="button" value="Cadastrar" id="cadastrar" name="cadastrar">
+					</form>
 				</div>
 			</div>
 		</div>
