--- a/Save_Money/app/login.html
+++ b/Save_Money/app/login.html
@@ -24,13 +24,13 @@
 				<div class="auth__media">
 					<img src="./images/undraw_Access.svg">
 				</div>
-				<div class="auth__auth">
-					<h1 class="auth__title">Login</h1>
+				<div class="auth__auth form">
+					<h1 class="auth__title">Página de Login</h1>
 					<p>Entre com seu e-mail e senha:</p>
 					<form method="POST" action="login.php">
 						<label>Login:</label><input type="text" name="login" id="login"><br>
 						<label>Senha:</label><input type="password" name="senha" id="senha"><br>
-						<input type="submit" value="entrar" id="entrar" name="entrar"><br>
+						<input class="button"type="submit" value="ACESSAR" id="entrar" name="entrar"><br>
 						<a href="cadastro.html">Cadastre-se</a>
 						<a href="#"><h6 class="left-align">Esqueceu sua senha?</h6></a>
 					</form>
