--- a/Save_Money/app/dashboard.html
+++ b/Save_Money/app/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMovey - Plataforma</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">	
@@ -18,7 +18,8 @@
 				<a href="index.html" class="navbar__logo">SaveMoney</a>
 				<nav class="navbar__menu">
 					<ul> 
-						<li><a href="#popanca">Poupança</a></li>
+						<li><a href="#popanca">Poupança</a></li>						
+						<li><a href="#Sonhos">Sonhos</a></li>
 						<li><a href="config.html">Configurações</a></li>
 						<li><a href="#sair">Sair</a></li>
 					</ul>					
@@ -40,21 +41,6 @@
 	  
 		
 	
-		 <div>
-			<a class="card"  href="poupanca.html" style="--bg-img: url('https://w7.pngwing.com/pngs/743/758/png-transparent-pie-chart-circle-angle-sugar-others-angle-orange-logo.png')">
-				<div>
-				  <h1>Poupança</h1>
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				  <div class="date">DATA?</div>
-				  <div class="tags">
-					<div class="tag">LINK</div>
-				  </div>
-				</div>
-			  </a>
-			</div>
-		 </div>
-		
-	  
 		 
 	
 	
