--- a/Save_Money/app/cadastro.html
+++ b/Save_Money/app/cadastro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
 <head>
-	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMoney - Cadastro</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
