--- a/Save_Money/app/index.html
+++ b/Save_Money/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
 <head>
-	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMoney - Seu dinheiro no seu bolso</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -40,7 +40,7 @@
 					<div class="hero__content__inner" id='navConverter'>
 						<h1 class="hero__title">O LOCAL CERTO DE GUARDA DINHEIRO</h1>
 						<p class="hero__text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-						<a href="login.html" class="button hero__button">Acesse</a>
+						<a href="cadastro.html" class="button hero__button">Faço o Cadastro</a>
 						<a href="#footer" class="button hero__button">Contate-nos</a>
 					</div>
 				</div>
