--- a/Save_Money_2/Save_Money_2/editar_perfil.html
+++ b/Save_Money_2/Save_Money_2/editar_perfil.html
@@ -23,9 +23,8 @@
 				<div class="container">
 					<div class="app__inner">
 						<div class="app__menu">
-							<ul class="vMenu">
-								<li><a href="dashboard.html">Inicio</a></li>
-								<li><a href="#" class="vMenu--active">Visão Geral</a></li>
+							<ul class="vMenu">								
+								<li><a href="dashboard.html" class="vMenu--active">Visão Geral</a></li>
 								<li><a href="poupanca.html">Poupança</a>
 									<ul>
 										<li><a href="poupanca_depositar.html">Depositar</a></li><br>
@@ -54,33 +53,21 @@
 							<div class="text-container">
 								<h3 class="app__main__title">Bem vindo(a) de volta!</h3>
 								<p>Logo abaixo segue seu planejamento referente ao mês atual.</p>
-								<div class="card-deck">
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Poupança</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted"><a href="poupanca.html"><button>Acessar</button></a> </small></p>
-									  </div>
+								<div class="card text-center">
+									<div class="card-header">
+									  Editar suas informações
 									</div>
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Sonhos</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted"><a href="sonho.html"><button>Acessar</button></a> </small></p>
-									  </div>
+									<div class="card-body">
+									  <h5 class="card-title">Special title treatment</h5>
+									  <p class="card-text">Mostra valor, com a saída e entrada</p>
+									  <a href="editar_perfil.html" class="btn btn-success">Editar</a>
+									  <a href="seguranca_perfil.html" class="btn btn-success">Segurança</a>
+									  <a href="atendimento.html" class="btn btn-success">Atendimento</a>
 									</div>
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Total</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-									  </div>
+									<div class="card-footer text-muted">
+										O seu dinheiro e o futuro
 									</div>
 								  </div>
-							
 							</div>
 						</div>
 						
