--- a/Save_Money_2/Save_Money_2/sonho.html
+++ b/Save_Money_2/Save_Money_2/sonho.html
@@ -54,30 +54,20 @@
 							<div class="text-container">
 								<h3 class="app__main__title">Bem vindo(a) de volta!</h3>
 								<p>Logo abaixo segue seu planejamento referente ao mês atual.</p>
-								<div class="card-deck">
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Poupança</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted"><a href="poupanca.html"><button>Acessar</button></a> </small></p>
-									  </div>
+								<div class="card text-center">
+									<div class="card-header">
+									  Editar suas informações
 									</div>
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Sonhos</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted"><a href="sonho.html"><button>Acessar</button></a> </small></p>
-									  </div>
+									<div class="card-body">
+									  <h5 class="card-title">Special title treatment</h5>
+									  <p class="card-text">Mostra valor, com a saída e entrada</p>
+									  <a href="criar_sonho.html" class="btn btn-success">Criar Sonho</a>
+									  <a href="editar_sonho.html" class="btn btn-success">Editar Sonho</a>
+									  <a href="depositar_sonho.html" class="btn btn-success">Depositar</a>
+									  <a href="retirar_sonho.html" class="btn btn-success">Retirada</a>
 									</div>
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Total</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-									  </div>
+									<div class="card-footer text-muted">
+									  O seu dinheiro e o futuro
 									</div>
 								  </div>
 							
