Alterado caminho de arquivos CSS no index.php

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMoney - Seu dinheiro no seu bolso</title>
-	<link rel="shortcut icon" href="View/images/favicon.png" type="image/x-icon">
-	<link rel='stylesheet' href='View/css/style.css' />
+	<link rel="shortcut icon" href="app/View/images/favicon.png" type="image/x-icon">
+	<link rel='stylesheet' href='app/View/css/style.css' />
 </head>
 <body class="fadeIn">
 	<div class="navbar navbar--extended">
