--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
 <head>
-	<meta class="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>SaveMoney - Seu dinheiro no seu bolso</title>
 	<link rel="shortcut icon" href="app/View/images/favicon.png" type="image/x-icon">
