--- a/cadastrar.html
+++ b/cadastrar.html
@@ -3,7 +3,7 @@
 <head>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Acessar Conta</title>
+	<title>Casdastrar</title>
 	<link rel='stylesheet' href='app/View/css/style.css' />
 </head>
 <body>
@@ -15,8 +15,8 @@
 				<a href="#" class="navbar__logo">SaveMoney</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="#">Início</a></li>
-						<li><a href="#">Cadastrar</a></li>
+						<li><a href="home.html">Início</a></li>
+						<li><a href="cadastrar.html">Cadastrar</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
@@ -31,15 +31,17 @@
 					<img src="app/View/images/undraw_product_iteration.svg">
 				</div>
 				<div class="auth__auth">
-					<h1 class="auth__title">Access your account</h1>
-					<p>Entre com seu nome de usário e senha:</p>
+					<h1 class="auth__title">Cadastre uma conta agora memso</h1>
+					<p>Entre com seu nome de usuário e senha:</p>
 					<form method='post' action="/example" autocompelete="new-password" role="presentation" class="form">
 						<input name="email" class="fakefield">
 						<label>Email</label>
 						<input type="text" name="email" id='email' placeholder="you@example.com">
 						<label>Senha</label>
 						<input type="password" name="password" id='password' placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" autocomplete="off">
-						<button type='submit' class="button button__accent">ACESSAR</button>
+						<input name="email" class="fakefield">
+						
+                        <button type='submit' class="button button__accent">ACESSAR</button>
 						<a href=""><h6 class="left-align" >Recuperar senha</h6></a>
 					</form>
 				</div>
